crates/jsonschema-codegen/tests/ui/duplicate_attribute_key.rs
#[jsonschema::validator(schema = r#"{"type":"integer"}"#, draft = Draft4, draft = Draft7)]
struct Validator;

fn main() {}
